--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -36,6 +36,7 @@
     "layout/archive",
     "layout/sidebar",
     "layout/json_cv",
+    "layout/news",
 
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
